<resources>
    <string name="app_name">shop</string>
    //tác giả
    <string name="tachgia">Phạm Hải Đăng</string>
    //nút
    <string name="add">Thêm</string>
    <string name="del">Xoá</string>
    <string name="Upadte">Sửa</string>
    <string name="show">Hiển thị</string>
    <string name="AddFriend">Add Friend</string>
    <string name="remove">Remove</string>

    //place_hoder
    <string name="fist">Fistname: </string>
    <string name="last">LastName: </string>
    <string name="email">Email: </string>
    <string name="pas">Password: </string>
    <string name="_pas">nhập lại Password: </string>
    //tiêu đề
    <string name="registration">registration</string>
    <string name="fist_">FistName:</string>
    <string name="last_">LastName:</string>
    <string name="email_">Email:</string>
    <string name="pass">Password:</string>
    <string name="_pass">confirm Password:</string>
    <string name="sex">sex:</string>
    <string name="full">Fullname: </string>
    <string name="register">register</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="forgot">forgot password?!</string>
    //text link
    <string name="text_register">"Don't have an account yet?"</string>
    <string name="text_login">Already have an account?</string>
    //link
    <string name="link_login"><font color='blue'> sign in!</font></string>
    <string name="link_register"><font color='blue'> sign up!</font></string>
    //chat bar
    <string name="type">Type something...</string>
    <string name="username">Username</string>
    <string name="status">offline </string>
    //profile bar
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    //check box
    <string name="male">Nam</string>
    <string name="female">Nữ</string>

    //spiner
    <array name="sex">\
        <item>Nam</item>
        <item>Nữ</item>
    </array>
    //menu
    <string name="setting">Setting</string>
    <string name="shop">Shop</string>
    <string name="friends">Friends</string>
    <string name="Contact">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>