<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_contact"
        android:enabled="true"
        android:icon="@drawable/ic_contacts"
        android:title="@string/Contact" />
    <item
        android:id="@+id/fragment_friends"
        android:enabled="true"
        android:icon="@drawable/ic_people"
        android:title="@string/friends" />
    <item
        android:id="@+id/fragment_profile"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />
    <item
        android:id="@+id/fragment_shop"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/shop" />
</menu>